<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="or">OR</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="remember_me">Remember-me</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="close_at">Fecha às</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="profile">Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="dish_image">Dish Image</string>
    <string name="main_dishes">Main Dishes</string>
</resources>
